--- a/Backend_MatrixCampusSL/pom.xml
+++ b/Backend_MatrixCampusSL/pom.xml
@@ -15,8 +15,9 @@
     <name>Backend_MatrixCampusSL</name>
     <description>Backend project for MatrixCampusSL</description>
     <properties>
-        <java.version>17</java.version>
-    </properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>¡
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -31,15 +32,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Spring Boot Starter Test includes Spring Test, JUnit, AssertJ, Hamcrest, Mockito -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.4.4.Final</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
