--- a/Backend_MatrixCampusSL/src/main/resources/application.yml
+++ b/Backend_MatrixCampusSL/src/main/resources/application.yml
@@ -1,17 +1,25 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
+    url: jdbc:h2:./testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password: 
+    driver-class-name: org.h2.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
       path: /h2-console
       settings:
         web-allow-others: true
+  sql:
+    init:
+      mode: embedded
+      schema-locations: classpath:data.sql
 
 logging:
   level:
