--- a/Backend_MatrixCampusSL/src/main/resources/application.yml
+++ b/Backend_MatrixCampusSL/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
@@ -16,10 +16,11 @@ spring:
       path: /h2-console
       settings:
         web-allow-others: true
-  sql:
-    init:
-      mode: embedded
-      schema-locations: classpath:data.sql
+  flyway:
+    enabled: true
+    locations: classpath:/db/migration
+    baselineOnMigrate: true
+    baselineVersion: 1
 
 logging:
   level:
