--- a/Backend_MatrixCampusSL/src/main/resources/application.yml
+++ b/Backend_MatrixCampusSL/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:h2:./testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
-    password: 
+    password: ""
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
@@ -19,8 +19,8 @@ spring:
   flyway:
     enabled: true
     locations: classpath:/db/migration
-    baselineOnMigrate: true
-    baselineVersion: 1
+    baseline-on-migrate: true
+    baseline-version: 1
 
 logging:
   level:
